# mpReview

./: .gitignore  CMakeLists.txt  MultiVolumeExplorer.py  PCampReview.py  PCampReviewHelper.py  PCampReviewPreprocessor.py  PCampReviewPreprocessorSelfTest.py  PCampReviewSelfTest.py  README  README.md  mpReview.py  mpReviewPreprocessor.py  mpReviewPreprocessor2.py  mpReviewPreprocessorSelfTest.py  mpReviewSelfTest.py
Logo/: mpReview.ai
PCampReviewLib/: LesionForm.py  __init__.py  pqWidget.py
PCampReviewSelfTest/: CMakeLists.txt  PCampReviewSelfTest.py
Resources/: PCampReview.qrc  SegmentationCategoryTypeModifier-mpReview.json  mpReview.qrc  mpReview_local_configuration.json  mpReview_remote_gcp_configuration.json  mpReview_remote_gcp_configuration_hierarchy.json  mpReview_remote_kaapana_configuration.json
Resources/Colors/: PCampReviewColors.csv
Testing/Python/: CMakeLists.txt  mpReviewSelfTest.py
Util/: CheckAndFixLabels.py  ComputeMeasurements.py  ConvertLegacySegmentations.py  MakeTableSummary.py  PCampReviewPreprocessor.py  SegmentationIsEmpty.py  SelectSegmentations.py  SeriesNormalizer.py  mixins.py  settings_volume_summary.json
Util/OncoQuant/: ComputePKMeasurementsLegacy.py  DicomToNrrdConverter.py
mpReviewUtils/: CheckAndFixLabels.py  ComputeMeasurements.py  ComputeMeasurementsLegacy.py  ConvertLegacySegmentations.py  MakeTableSummary.py  SelectSegmentations.py  SeriesNormalizer.py  findIncompleteSeries.py  mpReviewPreprocessor2.py  settings_volume_summary.json
mpReviewUtils/OncoQuant/: OncoQuantDCEChecker.py  PKModelling.py
